--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	"type": "module",
 	"dependencies": {
 		"amadeus": "^10.1.0",
+		"flutterwave-node-v3": "^1.1.10",
 		"swiper": "^11.1.10"
 	}
 }
