--- a/package.json
+++ b/package.json
@@ -39,7 +39,12 @@
 	"type": "module",
 	"dependencies": {
 		"amadeus": "^10.1.0",
+		"axios": "^1.7.7",
+		"country-flag-emoji": "^1.0.3",
+		"crypto": "^1.0.1",
+		"flag-icon-css": "^4.1.7",
 		"flutterwave-node-v3": "^1.1.10",
+		"node-forge": "^1.3.1",
 		"swiper": "^11.1.10"
 	}
 }
